--- a/bootrstrap.html
+++ b/bootrstrap.html
@@ -13,18 +13,24 @@
 <div class="container">
   <h2>Rounded Corners</h2>
   <p>The .img-rounded class adds rounded corners to an image (not available in IE8):</p>            
-  <img src="dog.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="236"> 
+  <img src="dog.jpeg" class="img-rounded" alt="Cinque Terre" width="304" height="236" onclick="dog()" id="dog1"> 
 </div>
 <div class="container">
   <h2>Circle</h2>
   <p>The .img-circle class shapes the image to a circle (not available in IE8):</p>            
-  <img src="dog.jpeg" class="img-circle" alt="Cinque Terre" width="304" height="236"> 
+  <img src="dog2.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236"> 
 </div>
 <div class="container">
   <h2>Thumbnail</h2>
   <p>The .img-thumbnail class creates a thumbnail of the image:</p>            
-  <img src="dog.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
+  <img src="dog.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236" onclick="dog()" id="dog2"> 
 </div>
+<script>
+     function dog(){
+      document.getElementById("dog1","dog2").src ="dog2.jpg";
+      
+}
+</script>
 
 
 </body>
