--- a/Hello4.html
+++ b/Hello4.html
@@ -21,6 +21,8 @@
         alt="Cinque Terre"
         width="304"
         height="236"
+        id="hello1"
+        onclick="hello()"
       />
       <h2>Circle</h2>
       <img
@@ -39,5 +41,10 @@
         height="236"
       />
     </div>
+    <script>
+      function hello() {
+        document.getElementById("hello1").src = "la.jpg";
+      }
+    </script>
   </body>
 </html>
